[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-identity>=1.23.0",
    "azure-storage-blob>=12.25.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "joblib>=1.5.1",
    "mlflow>=2.22.0",
    "pandas>=2.3.0",
    "prophet>=1.1.7",
    "pydantic>=2.11.5",
    "uvicorn>=0.34.3",
]
